--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>Audiobooks Research, Summer 2024</title>
   <meta charset="utf-8" />
 
-  <link type="text/css" rel="stylesheet" href="/static/bootstrap.min.css" />
+  <link type="text/css" rel="stylesheet" href="/anderson-summer-24-audiobooks/static/bootstrap.min.css" />
   
-  <link type="text/css" rel="stylesheet" href="/static/style.css" />
-  <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+  <link type="text/css" rel="stylesheet" href="/anderson-summer-24-audiobooks/static/style.css" />
+  <link rel="shortcut icon" href="/anderson-summer-24-audiobooks/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/anderson-summer-24-audiobooks/static/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -82,8 +81,8 @@
   </div>
 </footer>
   <!-- JavaScript -->
-  <script src="/static/jquery-3.1.0.min.js"></script>
-  <script src="/static/bootstrap.bundle.min.js"></script>
+  <script src="/anderson-summer-24-audiobooks/static/jquery-3.1.0.min.js"></script>
+  <script src="/anderson-summer-24-audiobooks/static/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
