--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="container">
   <div id ="#top" class="row">
     <div>
-    <h1>How God is Your Ear?</h1>
+    <h1>How Good is Your Ear?</h1>
     <h2>Take the Quiz</h2>
     <p>Coming soon</p>
     </div> 
