--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/a.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/a.mp3"></audio>
           </figure>
         </p>
 
@@ -91,7 +91,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/b.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/b.mp3"></audio>
           </figure>
         </p>
 
@@ -118,7 +118,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/c.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/c.mp3"></audio>
           </figure>
         </p>
 
@@ -153,7 +153,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/d.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/d.mp3"></audio>
           </figure>
         </p>
 
@@ -187,7 +187,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/e.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/e.mp3"></audio>
           </figure>
         </p>
 
@@ -230,7 +230,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/f.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/f.mp3"></audio>
           </figure>
         </p>
 
@@ -265,7 +265,7 @@
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
-                <audio controls src="/sound-clips/g.mp3"></audio>
+                <audio controls src="/anderson-summer-24-audiobooks/sound-clips/g.mp3"></audio>
           </figure>
         </p>
 
