--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p>
      <ul class="quiz">
     <li>
-        <h4>This audiobook narrator is a something of a celebrity. Can you identify them?</h4>
+        <h4>1. This audiobook narrator is a something of a celebrity. Can you identify them?</h4>
         <p>
           <figure>
             <figcaption>Click to play the sound clip:</figcaption>
@@ -86,7 +86,7 @@
     </li>
     <li>
 
-        <h4>In this sample, are we listening to more than person, or one voie actor doing different voices?</h4>
+        <h4>2. In this sample, are we listening to more than person, or one voie actor doing different voices?</h4>
 
         <p>
           <figure>
@@ -113,7 +113,7 @@
         </ul>
     </li>
     <li>
-        <h4>Which of the following best describes the age range of the narrator?</h4>
+        <h4>3. Which of the following best describes the age range of the narrator?</h4>
 
         <p>
           <figure>
@@ -148,7 +148,7 @@
     </li>
 
     <li>
-        <h4>How about this one? What age range would you guess?</h4>
+        <h4>4. How about this one? What age range would you guess?</h4>
 
         <p>
           <figure>
@@ -182,7 +182,7 @@
         </ul>
     </li>
     <li>
-        <h4>Based on the narrator's voice and the text she reads, what genre would you predict for this book?</h4>
+        <h4>5. Based on the narrator's voice and the text she reads, what genre would you predict for this book?</h4>
 
         <p>
           <figure>
@@ -225,7 +225,7 @@
 
     
     <li>
-        <h4>How is your ear for accents? Is this narrator from the United States, the United Kingdom, or Australia?</h4>
+        <h4>6. How is your ear for accents? Is this narrator from the United States, the United Kingdom, or Australia?</h4>
 
         <p>
           <figure>
@@ -260,7 +260,7 @@
     </li>
 
     <li>
-        <h4>How about this clip? Is it a genuine English accent, or just a convincing imitation?</h4>
+        <h4>7. How about this clip? Is it a genuine English accent, or just a convincing imitation?</h4>
 
         <p>
           <figure>
@@ -329,6 +329,13 @@
                 <label
                     ><input type="radio" name="question7" value="F" /><span
                         >Clip 6</span
+                    ></label
+                >
+            </li>
+            <li>
+                <label
+                    ><input type="radio" name="question7" value="G" /><span
+                        >Clip 7</span
                     ></label
                 >
             </li>
