adding team info

--- a/index.html
+++ b/index.html
@@ -358,9 +358,18 @@
     
   <a name="team"></a>
   <hr class="parallax"/>
-  <h3>Team</h3>
+  <h3>Project Team</h3>
   <div>
-    <p>Coming soon</p>
+    <p>Matthew Lavin, Assistant Professor of Data Analytics, Denison University. Project PI.</p>
+    <h4>Anderson Summer Undergraduate Researchers</h4>
+    <p>Hannah Nguyen, Undergraduate Research Assistant, Denison University.<br/>
+       Minh Le, Undergraduate Research Assistant, Denison University.</br>
+       Khoa Ho, Undergraduate Research Assistant, Denison University.</br></p>
+
+   <h4>Previous Undergraduate Research Assistants</h4>
+   <p>Hannah Nguyen, Undergraduate Research Assistant, Denison University.</br>
+      Bang Nguyen, Undergraduate Research Assistant, Denison University.</br>
+   </p>
   </div>
 
 	<a name="documentation"></a>
