--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <hr/>
     <li>
 
-        <h4>2. In this sample, are we listening to more than person, or one voie actor doing different voices?</h4>
+        <h4>2. In this sample, are we listening to more than person, or one voice actor doing different voices?</h4>
 
         <p>
           <figure>
@@ -128,21 +128,21 @@
             <li>
                 <label
                     ><input type="radio" name="question2" value="A" /><span
-                        >Teenager/adolescent</span
+                        >Under 18</span
                     ></label
                 >
             </li>
             <li>
                 <label
                     ><input type="radio" name="question2" value="B" /><span
-                        >Middle aged</span
+                        >Age 18-50</span
                     ></label
                 >
             </li>
             <li>
                 <label
                     ><input type="radio" name="question2" value="C" /><span
-                        >Elderly</span
+                        >Over 50</span
                     ></label
                 >
             </li>
@@ -163,21 +163,21 @@
             <li>
                 <label
                     ><input type="radio" name="question3" value="A" /><span
-                        >Teenager/adolescent</span
+                        >Under 18</span
                     ></label
                 >
             </li>
             <li>
                 <label
                     ><input type="radio" name="question3" value="B" /><span
-                        >Middle aged</span
+                        >Age 18-50</span
                     ></label
                 >
             </li>
             <li>
                 <label
                     ><input type="radio" name="question3" value="C" /><span
-                        >Elderly</span
+                        >Over 50</span
                     ></label
                 >
             </li>
